[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
#sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
actix-web = "4"
actix-files = "0"
actix-multipart = { version = "0", features = [ "tempfile" ] }
futures-util = "0"
env_logger = "0.10.0"
